--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12 about" id="about"> <img src="images/about1.jpg" width="100%" />
+      <div class="col-6_sm-12 about" id="about"> <img src="images/about1.jpg" class="editable" width="100%" />
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -63,7 +63,7 @@ layout: default
         </p>
         <a class="button" href="#"> Menu </a>
       </div>
-      <div class="col-6_sm-12"><img src="images/coffee1.png" width="100%" />
+      <div class="col-6_sm-12"><img src="images/coffee1.png"  class="editable" width="100%" />
       </div>
     </div>
   </section>
@@ -82,10 +82,11 @@ layout: default
     <h2 class="editable">
       Arrow Merch
     </h2>
+
     <div class="grid">
       <div class="col-4_sm-12 padded-1">
-        <img src="images/merch1.jpg" width="250" />
 
+        <img src="images/merch1.jpg" class="editable" width="250" />
         <h4 class="editable">
           Short Heading
         </h4>
@@ -94,8 +95,9 @@ layout: default
         </p>
         <a class="button editable" href="#"> Buy </a>
       </div>
+
       <div class="col-4_sm-12 padded-1">
-        <img src="images/merch3.png" width="250" />
+        <img src="images/merch3.png" class="editable" width="250" />
         <h4 class="editable">
           Short Heading
         </h4>
@@ -104,8 +106,9 @@ layout: default
         </p>
         <a class="button editable" href="#"> Buy </a>
       </div>
+
       <div class="col-4_sm-12 padded-1">
-        <img src="images/merch4.png" width="250" />
+        <img src="images/merch4.png" class="editable" width="250" />
         <h4 class="editable">
           Short Heading
         </h4>
