--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@ layout: default
          <ul>
            <li><a href="#about">About</a></li>
            <li><a href="#merch">Merch</a></li>
-           <li><a class="on-page ediable" href="#artists">Exhibits<br /></a><a class="on-page" style="display: inline !important;" href="#visit">Visit</a></li>
-           <li>
-             <ul></ul>
-           </li>
+           <li><a class="on-page editable" href="#artists">Exhibits</a></li>
+           <li><a class="on-page" href="#visit">Visit</a></li>
          </ul>
        </div>
     </nav>
