--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12 about" id="about"> <img src="images/about1.jpg" class="editable" width="100%" />
+      <div class="col-6_sm-12-middle about" id="about"> <img src="images/about1.jpg" class="editable" width="100%" />
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -61,7 +61,7 @@ layout: default
         </p>
         <a class="button" href="#"> Menu </a>
       </div>
-      <div class="col-6_sm-12"><img src="images/coffee1.png"  class="editable" width="100%" />
+      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" width="100%" />
       </div>
     </div>
   </section>
