--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@ layout: default
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
         <h2 class="editable">
-          About Arrow Cafe
+          About Arrow
         </h2>
         <p class="editable">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody! We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community. Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
         </p>
         <a class="button editable" href="#"> Support </a>
       </div>
     </div>
 
     <!-- COFFEE AT ARROW & IMAGE -->
-    <div class="grid padded-1">
+    <div class="grid padded-1 media-flip">
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> Only the best for you </h4> -->
         <h2 class="editable">
           Our Coffee
         </h2>
         <p class="editable">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          We use Hey! Cafe! Coffee roasters for all of our drip and espresso drinks. They are a local coffee roaster.
         </p>
-        <a class="button" href="#"> Menu </a>
+        <a class="button" href="http://www.heycafe.biz/" target="_blank"> They're Cool </a>
       </div>
-      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" width="100%" />
+      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" width="100%"/>
       </div>
     </div>
   </section>
