--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ layout: default
        <div class="burger-menu editable">
          <ul>
            <li><a href="#about">About</a></li>
-           <li><a href="#merch">Merch</a></li>
-           <li><a class="on-page editable" href="#artists">Exhibits</a></li>
+           <li><a href="#menu">Menu</a></li>
+           <li><a class="on-page editable" href="#merch">Merch</a></li>
            <li><a class="on-page" href="#visit">Visit</a></li>
          </ul>
        </div>
@@ -64,6 +64,30 @@ layout: default
       <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" width="100%"/>
       </div>
     </div>
+
+
+  <!-- SNOWBALL INFO -->
+  <div class="grid padded-1">
+    <div class="col-6_sm-12-middle about" id="about"> <img src="images/snowball.jpg" class="editable" width="100%" />
+    </div>
+    <div class="col-6_sm-12-middle padded-about">
+      <!-- <h4 class="subtle-heading"> a place for community</h4> -->
+      <h2 class="editable">
+        About Arrow
+      </h2>
+      <p class="editable">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <!-- <a class="button editable" href="#"> Collaboraters </a> -->
+    </div>
+  </div>
+
+  <div class="grid padded-1">
+    <div class="col-6_sm-12-middle about" id="about"> <img src="images/menu.jpg" class="editable" width="100%" />
+    </div>
+  </div>
+
+
   </section>
 
   <!-- INSTA EMBED -->
