--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ layout: default
   <!-- IMAGE OF ARTWORK -->
   <section class="grid padded-1" id="artists">
     <div class="col-12 editable centered">
-      <p><img width="70%" src="images/artists.png" /></p>
+      <p><img src="images/artists.png" /></p>
     </div>
     <!-- INORMATION ON ARTIST SPOTLIGHT / GALLERY -->
     <div class="col-3_sm-6_xs-12-top padded">
