--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+banner-image: images/logo4.png
+banner-alt:
 ---
 
 <!-- HEADER -->
@@ -26,7 +28,7 @@ layout: default
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" >
+      <img class"grid-center-middle phonelogo" src="{{page.banner-image}}" style="height:18rem;" >
     </div>
   </header>
 
@@ -83,7 +85,7 @@ layout: default
   </div>
 
   <div class="grid padded-1">
-    <div class="col-6_sm-12-middle about" id="about"> <img src="images/menu.jpg" class="editable" width="100%" />
+    <div class="col-12_sm-12-middle about" id="about"> <img src="images/menu.jpg" class="editable" width="100%" />
     </div>
   </div>
 
