--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ banner-alt:
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12-middle about" id="about"> <img src="images/about3.jpg" class="editable" width="100%" />
+      <div class="col-6_sm-12-middle about" id="about"> <img src="images/about3.jpg" class="editable" width="50%" />
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -75,7 +75,7 @@ banner-alt:
     <div class="col-6_sm-12-middle padded-about">
       <!-- <h4 class="subtle-heading"> a place for community</h4> -->
       <h2 class="editable">
-        About Arrow
+        It's Snowball O'Clock
       </h2>
       <p class="editable">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
