--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ banner-alt:
 
   <!-- SNOWBALL INFO -->
   <div class="grid padded-1">
-    <div class="col-6_sm-12-middle about" id="about"> <img src="images/snowball.jpg" class="editable" width="100%" />
+    <div class="col-6_sm-12-middle" id="about"> <img src="images/snowball.jpg" class="editable" width="100%" />
     </div>
     <div class="col-6_sm-12-middle padded-about">
       <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -146,12 +146,12 @@ banner-alt:
 
   <!-- ARTIST SPOTLIGHT -->
   <!-- IMAGE OF ARTWORK -->
-  <section class="grid padded-1" id="artists">
+  <!-- <section class="grid padded-1" id="artists">
     <div class="col-12 editable centered">
       <p><img src="images/artists.png" /></p>
-    </div>
+    </div> -->
     <!-- INORMATION ON ARTIST SPOTLIGHT / GALLERY -->
-    <div class="col-3_sm-6_xs-12-top padded">
+    <!-- <div class="col-3_sm-6_xs-12-top padded">
       <h2 class="editable">
         Arrow Cafe Presents:
       </h2>
@@ -167,7 +167,7 @@ banner-alt:
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br /><br />Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
     </div>
-  </section>
+  </section> -->
 
   <!-- FOOTER w/MAP & SOCIALS -->
   <footer class="grid padded" id="visit">
