--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ banner-alt:
   </div>
 
   <div class="grid padded-1">
-    <div class="col-12_sm-12-middle about centered" id="about"> <img src="images/menu.jpg" class="editable" width="50%" />
+    <div class="col-12_sm-12-middle centered" id="about"> <img src="images/menu.jpg" class="editable" width="50%" />
     </div>
   </div>
 
