--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ banner-alt:
 
   <!-- SNOWBALL INFO -->
   <div class="grid padded-1">
-    <div class="col-6_sm-12-middle" id="about"> <img src="images/snowball.jpg" class="editable" width="100%" />
+    <div class="col-6_sm-12-middle"> <img src="images/snowball.jpg" class="editable" width="100%" />
     </div>
     <div class="col-6_sm-12-middle padded-about">
       <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -84,10 +84,16 @@ banner-alt:
     </div>
   </div>
 
+<!-- MENU -->
+<section class="padded centered" id="menu">
+  <h2 class="editable">
+    Menu
+  </h2>
   <div class="grid padded-1">
-    <div class="col-12_sm-12-middle centered" id="about"> <img src="images/menu.jpg" class="editable" width="50%" />
+    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable" width="50%" />
     </div>
   </div>
+</section>
 
 
   </section>
