--- a/index.html
+++ b/index.html
@@ -86,14 +86,12 @@ banner-alt:
     </section>
 
 <!-- MENU -->
-<section class="padded centered" id="menu">
+<section class="padded grid centered" id="menu">
   <h2 class="editable">
     Menu
   </h2>
-  <div class="grid padded-1">
-    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable" width="50%" />
+    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable"  />
     </div>
-  </div>
 </section>
 
 
