--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ banner-alt:
 
 <!-- MENU -->
 <section class="padded grid centered" id="menu">
-  <h2 class="editable">
+  <h2 class="editable cented">
     Menu
   </h2>
-    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable"  />
+    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable" width= "70%" />
     </div>
 </section>
 
