--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ banner-alt:
           About Arrow
         </h2>
         <p class="editable">
-          Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody! We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community. Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
+          Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody! We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community.
         </p>
         <a class="button editable" href="#"> Support </a>
       </div>
@@ -78,7 +78,7 @@ banner-alt:
         Snowball Time
       </h2>
       <p class="editable">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
       </p>
       <!-- <a class="button editable" href="#"> Collaboraters </a> -->
     </div>
@@ -90,8 +90,8 @@ banner-alt:
   <h2 class="col-12 editable centered">
     Menu
   </h2>
-  
-    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable" width= "65%" />
+
+    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable" width= "250" />
     </div>
 </section>
 
@@ -165,7 +165,7 @@ banner-alt:
   </section> -->
 
   <!-- INSTA EMBED -->
-  <section class="padded">
+  <section class="padded mob-hide">
 
     <!-- SnapWidget -->
     <script src="https://snapwidget.com/js/snapwidget.js"></script>
