--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@ banner-alt:
     </section>
 
 <!-- MENU -->
-<section class="padded grid centered" id="menu">
+<section class="padded-1 grid centered" id="menu">
   <h2 class="col-12 editable centered">
     Menu
   </h2>
 
-    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable" width= "65%" />
+    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable"/>
     </div>
 </section>
 
