--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ banner-alt:
     Menu
   </h2>
 
-    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable"/>
+    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable menu" />
     </div>
 </section>
 
