--- a/index.html
+++ b/index.html
@@ -103,40 +103,52 @@ banner-alt:
     </h2>
 
     <div class="grid">
-      <div class="col-4_sm-12 padded-1">
+      <div class="col-3_sm-12 padded-1">
 
-        <img src="images/merch1.jpg" class="editable" width="250" />
+        <img src="images/merch1.jpg" class="editable" width="100%" />
         <h4 class="editable">
-          Short Heading
+          Jug of Iced Coffee
         </h4>
         <p class="editable">
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          $20
         </p>
         <a class="button editable" href="#"> Buy </a>
       </div>
 
-      <div class="col-4_sm-12 padded-1">
-        <img src="images/merch3.png" class="editable" width="250" />
+      <div class="col-3_sm-12 padded-1">
+        <img src="images/merch3.png" class="editable" width="100%" />
         <h4 class="editable">
-          Short Heading
+          Arrow Tee Collection
         </h4>
         <p class="editable">
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          $20 - $25
         </p>
         <a class="button editable" href="#"> Buy </a>
       </div>
 
-      <div class="col-4_sm-12 padded-1">
-        <img src="images/merch4.png" class="editable" width="250" />
+      <div class="col-3_sm-12 padded-1">
+        <img src="images/merch4.png" class="editable" width="100%" />
         <h4 class="editable">
-          Short Heading
+          Coffee Bags
         </h4>
         <p class="editable">
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          $16
         </p>
         <a class="button editable" href="#"> Buy </a>
       </div>
     </div>
+
+    <div class="col-3_sm-12 padded-1">
+      <img src="images/merch5.png" class="editable" width="100%" />
+      <h4 class="editable">
+        Totes
+      </h4>
+      <p class="editable">
+        $12
+      </p>
+      <a class="button editable" href="#"> Buy </a>
+    </div>
+  </div>
   </section>
 
   <!-- ARTIST SPOTLIGHT -->
