--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ banner-alt:
 
 
   <!-- MERCH w/BUTTONS -->
-  <section class="padded centered" id="merch">
+  <section class="padded-1 centered" id="merch">
     <h2 class="editable">
       Arrow Merch
     </h2>
