--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ banner-alt:
     </div>
 
     <div class="col-3_sm-12 padded-1">
-      <img src="images/merch5.png" class="editable" width="100%" />
+      <img src="images/merch5.jpg" class="editable" width="100%" />
       <h4 class="editable">
         Totes
       </h4>
