--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ banner-alt:
       </div>
 
       <div class="col-3_sm-12 padded-1">
-        <img src="images/merch4.png" class="editable" width="100%" />
+        <img src="images/merch4.png" class="editable" />
         <h4 class="editable">
           Coffee Bags
         </h4>
@@ -139,7 +139,7 @@ banner-alt:
     </div>
 
     <div class="col-3_sm-12 padded-1">
-      <img src="images/merch1.jpg" class="editable" width="100%" />
+      <img src="images/merch1.jpg" class="editable" />
       <h4 class="editable">
         Totes
       </h4>
