--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ banner-alt:
 
         <img src="images/merch1.jpg" class="editable" width="100%" />
         <h4 class="editable">
-          Jug of Iced Coffee
+          Iced Coffee Jug
         </h4>
         <p class="editable">
           $20
@@ -118,7 +118,7 @@ banner-alt:
       <div class="col-3_sm-12 padded-1">
         <img src="images/merch3.png" class="editable" width="100%" />
         <h4 class="editable">
-          Arrow Tee Collection
+          Arrow Tees
         </h4>
         <p class="editable">
           $20 - $25
@@ -129,7 +129,7 @@ banner-alt:
       <div class="col-3_sm-12 padded-1">
         <img src="images/merch4.png" class="editable" />
         <h4 class="editable">
-          Coffee Bags
+          Coffee Beans
         </h4>
         <p class="editable">
           $16
