--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ banner-alt:
     Menu
   </h2>
 
-    <div class="col-12_sm-12-middle centered"> <img src="images/menu.jpg" class="editable menu" />
+    <div class="col-12_sm-12-middle centered menu"> <img src="images/menu.jpg" class="editable" />
     </div>
 </section>
 
@@ -105,7 +105,7 @@ banner-alt:
     <div class="grid">
       <div class="col-3_sm-12 padded-1">
 
-        <img src="images/merch1.jpg" class="editable" width="100%" />
+        <img src="images/merch1.jpg" class="editable" width="250" />
         <h4 class="editable">
           Iced Coffee Jug
         </h4>
@@ -116,7 +116,7 @@ banner-alt:
       </div>
 
       <div class="col-3_sm-12 padded-1">
-        <img src="images/merch3.png" class="editable" width="100%" />
+        <img src="images/merch3.png" class="editable" width="250" />
         <h4 class="editable">
           Arrow Tees
         </h4>
@@ -127,7 +127,7 @@ banner-alt:
       </div>
 
       <div class="col-3_sm-12 padded-1">
-        <img src="images/merch4.png" class="editable" />
+        <img src="images/merch4.png" class="editable" width="250" />
         <h4 class="editable">
           Coffee Beans
         </h4>
@@ -139,7 +139,7 @@ banner-alt:
     </div>
 
     <div class="col-3_sm-12 padded-1">
-      <img src="images/merch1.jpg" class="editable" />
+      <img src="images/merch5.jpg" class="editable" width="250"/>
       <h4 class="editable">
         Totes
       </h4>
