--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ banner-alt:
       Arrow Merch
     </h2>
 
-    <div class="grid padded-1">
-      <div class="col-3_sm-12">
+    <div class="grid padded">
 
+      <div class="col">
         <img src="images/merch1.jpg" class="editable" width="250" />
         <h4 class="editable">
           Iced Coffee Jug
@@ -115,7 +115,7 @@ banner-alt:
         <a class="button editable" href="#"> Buy </a>
       </div>
 
-      <div class="col-3_sm-12">
+      <div class="col">
         <img src="images/merch3.png" class="editable" width="250" />
         <h4 class="editable">
           Arrow Tees
@@ -126,7 +126,7 @@ banner-alt:
         <a class="button editable" href="#"> Buy </a>
       </div>
 
-      <div class="col-3_sm-12">
+      <div class="col">
         <img src="images/merch4.png" class="editable" width="250" />
         <h4 class="editable">
           Coffee Beans
@@ -138,7 +138,7 @@ banner-alt:
       </div>
     </div>
 
-    <div class="col-3_sm-12">
+    <div class="col">
       <img src="images/merch5.jpg" class="editable" width="250"/>
       <h4 class="editable">
         Totes
