merch grid responsive fix

--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@ banner-alt:
 
 
   <!-- MERCH w/BUTTONS -->
-  <section class="padded-1 centered" id="merch">
+  <section class="padded centered" id="merch">
     <h2 class="editable">
       Arrow Merch
     </h2>
 
-    <div class="grid padded">
-
-      <div class="col">
+    <div class="grid">
+      <div class="col-3_md-6_sm-12 padded-1">
         <img src="images/merch1.jpg" class="editable" width="250" />
         <h4 class="editable">
           Iced Coffee Jug
@@ -115,7 +114,7 @@ banner-alt:
         <a class="button editable" href="#"> Buy </a>
       </div>
 
-      <div class="col">
+      <div class="col-3_md-6_sm-12 padded-1">
         <img src="images/merch3.png" class="editable" width="250" />
         <h4 class="editable">
           Arrow Tees
@@ -126,7 +125,7 @@ banner-alt:
         <a class="button editable" href="#"> Buy </a>
       </div>
 
-      <div class="col">
+      <div class="col-3_md-6_sm-12 padded-1">
         <img src="images/merch4.png" class="editable" width="250" />
         <h4 class="editable">
           Coffee Beans
@@ -137,7 +136,7 @@ banner-alt:
         <a class="button editable" href="#"> Buy </a>
       </div>
 
-    <div class="col">
+    <div class="col-3_md-6_sm-12 padded-1">
       <img src="images/merch5.jpg" class="editable" width="250"/>
       <h4 class="editable">
         Totes
