--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ banner-alt:
 
   <!-- MERCH w/BUTTONS -->
   <section class="padded centered" id="merch">
-    <h2 class="editable">
+    <h2 class="editable padded-1">
       Arrow Merch
     </h2>
 
