--- a/index.html
+++ b/index.html
@@ -195,13 +195,16 @@ banner-alt:
         Visit Us
       </h2>
       <p class="editable">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        We're currently open from 12 - 5pm serving coffee and snowballs from our to go window at our store front. Check back for more information as we navigate reopening. 
       </p>
       <p class="editable">
         <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112
       </p>
       <p class="editable">
         <strong> Phone: </strong> 0412 555 555
+      </p>
+      <p class="editable">
+        <strong> Email: </strong> hello@arrowcafenola.com
       </p>
 
       <!-- SOCIAL/EMAIL ICONS -->
