--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-banner-image: images/logo4.png
-banner-alt:
+logo-image: images/logo4.png
+logo-alt:
 ---
 
 <!-- HEADER -->
@@ -28,7 +28,7 @@ banner-alt:
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo" src="{{page.banner-image}}" style="height:18rem;" >
+      <img class"grid-center-middle phonelogo" src="{{page.logo-image}}" style="height:18rem;" >
     </div>
   </header>
 
@@ -200,7 +200,7 @@ banner-alt:
       <p class="editable">
         <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112
       </p>
-    
+
       <p class="editable">
         <strong> Email: </strong> hello@arrowcafenola.com
       </p>
