--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ logo-alt:
         Visit Us
       </h2>
       <p class="editable">
-        We're currently open from 12 - 5pm serving coffee and snowballs from our to go window at our store front. Check back for more information as we navigate reopening. 
+        We're currently open from 9am - 3pm serving coffee and snowballs from our new snazzy to go window at the front of the cafe. Check back for more information as we navigate reopening. 
       </p>
       <p class="editable">
         <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112
