--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-logo-image: images/logo4.png
-logo-alt:
+banner-image: 
+banner-alt:
 ---
 
 <!-- HEADER -->
@@ -28,7 +28,7 @@ logo-alt:
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo" src="{{page.logo-image}}" style="height:18rem;" >
+      <img class"grid-center-middle phonelogo" src="images/logo4.png.jpg" style="height:18rem;" >
     </div>
   </header>
 
