--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-banner-image: 
+banner-image:
 banner-alt:
 ---
 
@@ -28,7 +28,7 @@ banner-alt:
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo" src="images/logo4.png.jpg" style="height:18rem;" >
+      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" >
     </div>
   </header>
 
