Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ banner-alt:
          <ul>
            <li><a href="#about">About</a></li>
            <li><a href="#menu">Menu</a></li>
-           <li><a class="on-page editable" href="#merch">Merch</a></li>
+           <li><a class="on-page" href="#merch">Merch</a></li>
            <li><a class="on-page" href="#visit">Visit</a></li>
          </ul>
        </div>
@@ -28,7 +28,7 @@ banner-alt:
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" >
+      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" />
     </div>
   </header>
 
@@ -47,7 +47,7 @@ banner-alt:
         <p class="editable">
           Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody! We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community.
         </p>
-        <a class="button editable" href="https://www.paypal.com/pools/c/8or5bHxddD"target="_blank"> Support </a>
+        <a class="button editable" href="https://www.paypal.com/pools/c/8or5bHxddD" target="_blank"> Support </a>
       </div>
     </div>
 
@@ -63,7 +63,7 @@ banner-alt:
         </p>
         <a class="button" href="http://www.heycafe.biz/" target="_blank"> They're Cool </a>
       </div>
-      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" width="100%"/>
+      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" width="100%" />
       </div>
     </div>
 
@@ -111,7 +111,7 @@ banner-alt:
         <p class="editable">
           $20
         </p>
-        <a class="button editable" href="#"> Buy </a>
+        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
@@ -122,7 +122,7 @@ banner-alt:
         <p class="editable">
           $20 - $25
         </p>
-        <a class="button editable" href="#"> Buy </a>
+        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
@@ -133,18 +133,18 @@ banner-alt:
         <p class="editable">
           $16
         </p>
-        <a class="button editable" href="#"> Buy </a>
+        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
       </div>
 
     <div class="col-3_md-6_sm-12 padded-1">
-      <img src="images/merch5.jpg" class="editable" width="250"/>
+      <img src="images/merch5.jpg" class="editable" width="250" />
       <h4 class="editable">
         Totes
       </h4>
       <p class="editable">
         $12
       </p>
-      <a class="button editable" href="#"> Buy </a>
+      <a class="button editable" href="#">Coming Soon!&nbsp;</a>
     </div>
     </div>
   </section>
@@ -195,7 +195,7 @@ banner-alt:
         Visit Us
       </h2>
       <p class="editable">
-        We're currently open from 9am - 3pm serving coffee and snowballs from our new snazzy to go window at the front of the cafe. Check back for more information as we navigate reopening. 
+        We're currently open from 9am - 3pm serving coffee and snowballs from our new snazzy to go window at the front of the cafe. Check back for more information as we navigate reopening.&nbsp;
       </p>
       <p class="editable">
         <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112
