--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ banner-alt:
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" />
+      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
     </div>
   </header>
 
@@ -37,7 +37,7 @@ banner-alt:
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12-middle about" id="about"> <img src="images/about3.jpg" class="editable" width="100%" />
+      <div class="col-6_sm-12-middle about" id="about"> <img src="images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%" />
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -63,14 +63,14 @@ banner-alt:
         </p>
         <a class="button" href="http://www.heycafe.biz/" target="_blank"> They're Cool </a>
       </div>
-      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" width="100%" />
+      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%" />
       </div>
     </div>
 
 
   <!-- SNOWBALL INFO -->
   <div class="grid padded-1">
-    <div class="col-6_sm-12-middle"> <img src="images/snowball.jpg" class="editable" width="100%" />
+    <div class="col-6_sm-12-middle"> <img src="images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%" />
     </div>
     <div class="col-6_sm-12-middle padded-about">
       <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -104,7 +104,7 @@ banner-alt:
 
     <div class="grid">
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch1.jpg" class="editable" width="250" />
+        <img src="images/merch1.jpg" alt="Arrow Cafe Merch" class="editable" width="250" />
         <h4 class="editable">
           Iced Coffee Jug
         </h4>
@@ -115,7 +115,7 @@ banner-alt:
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch3.png" class="editable" width="250" />
+        <img src="images/merch3.png" alt="Arrow Cafe Merch" class="editable" width="250" />
         <h4 class="editable">
           Arrow Tees
         </h4>
@@ -126,7 +126,7 @@ banner-alt:
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch4.png" class="editable" width="250" />
+        <img src="images/merch4.png" alt="Arrow Cafe Merch" class="editable" width="250" />
         <h4 class="editable">
           Coffee Beans
         </h4>
@@ -137,7 +137,7 @@ banner-alt:
       </div>
 
     <div class="col-3_md-6_sm-12 padded-1">
-      <img src="images/merch5.jpg" class="editable" width="250" />
+      <img src="images/merch5.jpg" alt="Arrow Cafe Merch" class="editable" width="250" />
       <h4 class="editable">
         Totes
       </h4>
