--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ banner-alt:
         <a href="https://www.instagram.com/arrowcafe/?hl=en" class="editable" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="#" class="editable">
+        <a href="a href="mailto:hello@arrowcafenola.com"" class="editable">
           <i class="far fa-envelope"></i>
         </a>
       </nav>
