--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ banner-alt:
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class"grid-center-middle phonelogo" src="images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
+      <img class="grid-center-middle phonelogo" src="/images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
     </div>
   </header>
 
@@ -37,10 +37,10 @@ banner-alt:
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12-middle about" id="about"> <img src="images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%" />
+      <div class="col-6_sm-12-middle about" id="about"> <img src="/images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%" />
       </div>
       <div class="col-6_sm-12-middle padded-about">
-        <!-- <h4 class="subtle-heading"> a place for community</h4> -->
+
         <h2 class="editable">
           About Arrow
         </h2>
@@ -54,7 +54,7 @@ banner-alt:
     <!-- COFFEE AT ARROW & IMAGE -->
     <div class="grid padded-1 media-flip">
       <div class="col-6_sm-12-middle padded-about">
-        <!-- <h4 class="subtle-heading"> Only the best for you </h4> -->
+
         <h2 class="editable">
           Our Coffee
         </h2>
@@ -63,24 +63,22 @@ banner-alt:
         </p>
         <a class="button" href="http://www.heycafe.biz/" target="_blank"> They're Cool </a>
       </div>
-      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%" />
+      <div class="col-6_sm-12-middle"><img src="/images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%">
       </div>
     </div>
 
 
   <!-- SNOWBALL INFO -->
   <div class="grid padded-1">
-    <div class="col-6_sm-12-middle"> <img src="images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%" />
+    <div class="col-6_sm-12-middle"> <img src="/images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%">
     </div>
     <div class="col-6_sm-12-middle padded-about">
-      <!-- <h4 class="subtle-heading"> a place for community</h4> -->
       <h2 class="editable">
         Snowball Time
       </h2>
       <p class="editable">
         Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
       </p>
-      <!-- <a class="button editable" href="#"> Collaboraters </a> -->
     </div>
   </div>
     </section>
@@ -104,47 +102,47 @@ banner-alt:
 
     <div class="grid">
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch1.jpg" alt="Arrow Cafe Merch" class="editable" width="250" />
+        <img src="/images/merch1.jpg" alt="Arrow Cafe Merch" class="editable" width="250">
         <h4 class="editable">
           Iced Coffee Jug
         </h4>
         <p class="editable">
           $20
         </p>
-        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
+        <a class="button editable" href="#">Coming Soon!</a>
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch3.png" alt="Arrow Cafe Merch" class="editable" width="250" />
+        <img src="/images/merch3.png" alt="Arrow Cafe Merch" class="editable" width="250">
         <h4 class="editable">
           Arrow Tees
         </h4>
         <p class="editable">
           $20 - $25
         </p>
-        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
+        <a class="button editable" href="#">Coming Soon!</a>
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch4.png" alt="Arrow Cafe Merch" class="editable" width="250" />
+        <img src="/images/merch4.png" alt="Arrow Cafe Merch" class="editable" width="250">
         <h4 class="editable">
           Coffee Beans
         </h4>
         <p class="editable">
           $16
         </p>
-        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
+        <a class="button editable" href="#">Coming Soon!</a>
       </div>
 
     <div class="col-3_md-6_sm-12 padded-1">
-      <img src="images/merch5.jpg" alt="Arrow Cafe Merch" class="editable" width="250" />
+      <img src="/images/merch5.jpg" alt="Arrow Cafe Merch" class="editable" width="250">
       <h4 class="editable">
         Totes
       </h4>
       <p class="editable">
         $12
       </p>
-      <a class="button editable" href="#">Coming Soon!&nbsp;</a>
+      <a class="button editable" href="#">Coming Soon!</a>
     </div>
     </div>
   </section>
