--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ banner-alt:
     <div class="layer centered">
       <!-- <div class="logo">
     </div> -->
-      <img class="grid-center-middle centered phonelogo" src="/images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
+      <img class="grid-center-middle centered" src="/images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
     </div>
   </header>
 
