--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ banner-alt:
 <!-- BANNER & LOGO -->
   <header class="banner grid-center padded">
     <div class="layer centered">
-      <img class="grid-center-middle centered" src="images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
+      <img class="grid-center-middle center" src="images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
     </div>
   </header>
 
