--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ banner-alt:
 <!-- BANNER & LOGO -->
   <header class="banner grid-center padded">
     <div class="layer centered">
-      <img class="grid-center-middle center" src="images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
+      <img class="grid-center-middle center" src="/images/logo4.png" style="height:18rem;" alt="Arrrow Cafe NOLA Logo" />
     </div>
   </header>
 
@@ -35,10 +35,9 @@ banner-alt:
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12-middle about" id="about"> <img src="images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%" />
+      <div class="col-6_sm-12-middle about" id="about"> <img src="/images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%">
       </div>
       <div class="col-6_sm-12-middle padded-about">
-        <!-- <h4 class="subtle-heading"> a place for community</h4> -->
         <h2 class="editable">
           About Arrow
         </h2>
@@ -52,7 +51,6 @@ banner-alt:
     <!-- COFFEE AT ARROW & IMAGE -->
     <div class="grid padded-1 media-flip">
       <div class="col-6_sm-12-middle padded-about">
-        <!-- <h4 class="subtle-heading"> Only the best for you </h4> -->
         <h2 class="editable">
           Our Coffee
         </h2>
@@ -61,14 +59,14 @@ banner-alt:
         </p>
         <a class="button" href="http://www.heycafe.biz/" target="_blank"> They're Cool </a>
       </div>
-      <div class="col-6_sm-12-middle"><img src="images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%" />
+      <div class="col-6_sm-12-middle"><img src="/images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%">
       </div>
     </div>
 
 
   <!-- SNOWBALL INFO -->
   <div class="grid padded-1">
-    <div class="col-6_sm-12-middle"> <img src="images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%" />
+    <div class="col-6_sm-12-middle"> <img src="/images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%">
     </div>
     <div class="col-6_sm-12-middle padded-about">
       <!-- <h4 class="subtle-heading"> a place for community</h4> -->
@@ -89,7 +87,7 @@ banner-alt:
     Menu
   </h2>
 
-    <div class="col-12_sm-12-middle centered menu"> <img src="images/menu.jpg" class="editable"/>
+    <div class="col-12_sm-12-middle centered menu"> <img src="/images/menu.jpg" class="editable">
     </div>
 </section>
 
@@ -102,7 +100,7 @@ banner-alt:
 
     <div class="grid">
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch1.jpg" alt="Arrow Cafe Merch" class="editable" width="250" />
+        <img src="/images/merch1.jpg" alt="Arrow Cafe Merch" class="editable" width="250">
         <h4 class="editable">
           Iced Coffee Jug
         </h4>
@@ -113,7 +111,7 @@ banner-alt:
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch3.png" alt="Arrow Cafe Merch" class="editable" width="250" />
+        <img src="/images/merch3.png" alt="Arrow Cafe Merch" class="editable" width="250">
         <h4 class="editable">
           Arrow Tees
         </h4>
@@ -124,7 +122,7 @@ banner-alt:
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="images/merch4.png" alt="Arrow Cafe Merch" class="editable" width="250" />
+        <img src="/images/merch4.png" alt="Arrow Cafe Merch" class="editable" width="250">
         <h4 class="editable">
           Coffee Beans
         </h4>
@@ -135,14 +133,14 @@ banner-alt:
       </div>
 
     <div class="col-3_md-6_sm-12 padded-1">
-      <img src="images/merch5.jpg" alt="Arrow Cafe Merch" class="editable" width="250" />
+      <img src="/images/merch5.jpg" alt="Arrow Cafe Merch" class="editable" width="250">
       <h4 class="editable">
         Totes
       </h4>
       <p class="editable">
         $12
       </p>
-      <a class="button editable" href="#">Coming Soon!&nbsp;</a>
+      <a class="button editable" href="#">Coming Soon!</a>
     </div>
     </div>
   </section>
@@ -193,7 +191,7 @@ banner-alt:
         Visit Us
       </h2>
       <p class="editable">
-        We're currently open from 9am - 3pm serving coffee and snowballs from our new snazzy to go window at the front of the cafe. Check back for more information as we navigate reopening.&nbsp;
+        We're currently open from 9am - 3pm serving coffee and snowballs from our new snazzy to go window at the front of the cafe. Check back for more information as we navigate reopening.
       </p>
       <p class="editable">
         <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112
