--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
 layout: default
-banner-image:
-banner-alt:
 ---
 
 <!-- HEADER -->
@@ -191,7 +189,7 @@ banner-alt:
         Visit Us
       </h2>
       <p class="editable">
-        We're currently open from 9am - 3pm serving coffee and snowballs from our new snazzy to go window at the front of the cafe. Check back for more information as we navigate reopening.
+        Currently we are serving from our carry-out window. Check out our socials to stay up to date on our open hours.
       </p>
       <p class="editable">
         <strong> Address: </strong> 628 N Rampart St, New Orleans, LA 70112
