footer fix for real?

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ layout: default
       </p>
 
       <!-- SOCIAL/EMAIL ICONS -->
-      <nav class="inline socials">
+      <nav class="social socials">
         <a href="https://www.facebook.com/arrowcafenola/" class="editable" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a>
