--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
 
     <!-- COFFEE AT ARROW & IMAGE -->
     <div class="grid padded-1 media-flip">
-      <div class="col-6_sm-12-middle padded-about">
+      <div class="col-6_sm-12-middle padded-about hotcoffee">
         <h2 class="editable">
           Our Coffee
         </h2>
@@ -57,16 +57,17 @@ layout: default
         </p>
         <a class="button" href="http://www.heycafe.biz/" target="_blank"> They're Cool </a>
       </div>
-      <div class="col-6_sm-12-middle"><img src="/images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%">
+
+      <div class="col-6_sm-12-middle">
+        <img src="/images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%">
       </div>
-    </div>
 
 
   <!-- SNOWBALL INFO -->
   <div class="grid padded-1">
     <div class="col-6_sm-12-middle"> <img src="/images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%">
     </div>
-    <div class="col-6_sm-12-middle padded-about">
+    <div class="col-6_sm-12-middle padded-about snowball">
       <!-- <h4 class="subtle-heading"> a place for community</h4> -->
       <h2 class="editable">
         Snowball Time
