--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12-middle about" id="about"> <img src="/images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%">
+      <div class="col-6_sm-12-middle" id="about"> <img src="/images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%">
       </div>
       <div class="col-6_sm-12-middle padded-about">
         <h2 class="editable">
@@ -58,26 +58,28 @@ layout: default
         <a class="button" href="http://www.heycafe.biz/" target="_blank"> They're Cool </a>
       </div>
 
-      <div class="col-6_sm-12-middle">
+      <div class="col-6_sm-12-middle padded-about">
         <img src="/images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%">
+      </div>
       </div>
 
 
-  <!-- SNOWBALL INFO -->
-  <div class="grid padded-1">
-    <div class="col-6_sm-12-middle"> <img src="/images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%">
-    </div>
-    <div class="col-6_sm-12-middle padded-about snowball">
-      <!-- <h4 class="subtle-heading"> a place for community</h4> -->
-      <h2 class="editable">
+      <!-- SNOWBALL INFO -->
+      <div class="grid padded-1">
+        <div class="col-6_sm-12-middle"> <img src="/images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%">
+        </div>
+
+        <div class="col-6_sm-12-middle padded-about snowball">
+          <!-- <h4 class="subtle-heading"> a place for community</h4> -->
+          <h2 class="editable">
         Snowball Time
-      </h2>
-      <p class="editable">
+        </h2>
+        <p class="editable">
         Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
-      </p>
+        </p>
       <!-- <a class="button editable" href="#"> Collaboraters </a> -->
+      </div>
     </div>
-  </div>
     </section>
 
 <!-- MENU -->
