--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
     <div class="grid padded-1">
       <div class="col-6_sm-12-middle" id="about"> <img src="/images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%">
       </div>
-      <div class="col-6_sm-12-middle padded-about">
+      <div class="col-6_sm-12-middle padded-about arrows">
         <h2 class="editable">
           About Arrow
         </h2>
@@ -76,6 +76,8 @@ layout: default
         </h2>
         <p class="editable">
         Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
+        <br>
+        <br>
         </p>
       <!-- <a class="button editable" href="#"> Collaboraters </a> -->
       </div>
