--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
         <div class="col-6_sm-12-middle padded-about snowball">
           <!-- <h4 class="subtle-heading"> a place for community</h4> -->
           <h2 class="editable">
-        Snowball Time
+        It's Hot Y'all
         </h2>
         <p class="editable">
         Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
@@ -90,7 +90,7 @@ layout: default
     Menu
   </h2>
 
-    <div class="col-12_sm-12-middle centered menu"> <img src="/images/menu.jpg" class="editable">
+    <div class="col-12_sm-12-middle centered padded-1 menu"> <img src="/images/menu.jpg" class="editable">
     </div>
 </section>
 
@@ -100,6 +100,11 @@ layout: default
     <h2 class="editable">
       Arrow Merch
     </h2>
+    <p class="emphasis">
+      Currently all merch is available to purchase through our carry-out window.
+      <br>
+      Check back soon for options to buy online!
+    </p>
 
     <div class="grid">
       <div class="col-3_md-6_sm-12 padded-1">
@@ -110,7 +115,7 @@ layout: default
         <p class="editable">
           $20
         </p>
-        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
+        <!-- <a class="button editable" href="#">Buy Online</a> -->
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
@@ -121,7 +126,7 @@ layout: default
         <p class="editable">
           $20 - $25
         </p>
-        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
+        <!-- <a class="button editable" href="#">Buy Online</a> -->
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
@@ -132,7 +137,7 @@ layout: default
         <p class="editable">
           $16
         </p>
-        <a class="button editable" href="#">Coming Soon!&nbsp;</a>
+        <!-- <a class="button editable" href="#">Buy Online</a> -->
       </div>
 
     <div class="col-3_md-6_sm-12 padded-1">
@@ -143,7 +148,7 @@ layout: default
       <p class="editable">
         $12
       </p>
-      <a class="button editable" href="#">Coming Soon!</a>
+      <!-- <a class="button editable" href="#">Buy Online</a> -->
     </div>
     </div>
   </section>
@@ -184,6 +189,7 @@ layout: default
 
   <!-- FOOTER w/MAP & SOCIALS -->
   <footer class="grid padded" id="visit">
+
     <!-- GOOGLE MAP -->
     <div class="col-6_sm-12-middle padded-1">
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13826.691885613254!2d-90.0685139!3d29.9600839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7b9ecc26045ee330!2sArrow%20Cafe!5e0!3m2!1sen!2sus!4v1591370772651!5m2!1sen!2sus" width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -193,6 +199,7 @@ layout: default
       <h2 class="editable">
         Visit Us
       </h2>
+
       <p class="editable">
         Currently we are serving from our carry-out window. Check out our socials to stay up to date on our open hours.
       </p>
@@ -217,5 +224,7 @@ layout: default
           <i class="far fa-envelope"></i>
         </a>
       </nav>
+
     </div>
+
   </footer>
